--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="me.ahmed_ayman1708.newsappstage1.Activities.MainActivity">
 
+    <FrameLayout
+        android:id="@+id/articalsLayout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+
+    </FrameLayout>
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation2"
         android:layout_width="match_parent"
@@ -14,4 +22,4 @@
         android:background="?android:attr/windowBackground"
         app:menu="@menu/bottomnavigation" />
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
