--- a/app/src/main/res/layout/news_list_item.xml
+++ b/app/src/main/res/layout/news_list_item.xml
@@ -81,18 +81,23 @@
 
 
         </LinearLayout>
+        <View
+            android:id="@+id/divder2"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/onedp"
+            android:layout_below="@id/LinearBelowDivider"
+            android:layout_gravity="center"
+            android:background="@android:color/darker_gray" />
 
-        <Button
-            android:id="@+id/authorButton"
+        <TextView
+            android:id="@+id/authortv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:padding="@dimen/smalldp"
+            android:gravity="center"
             android:layout_below="@id/LinearBelowDivider"
-            android:layout_marginLeft="@dimen/meddp"
-            android:layout_marginRight="@dimen/meddp"
-            android:background="@drawable/buttons_border"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textColor="@android:color/white"
-            android:textStyle="bold"
+            android:textColor="@color/colorofprice"
             tools:text="@string/placeholder" />
     </RelativeLayout>
 </LinearLayout>
